Bug 1498329 - Fix a bug in AndroidVelocityTracker::ComputeVelocity() where we were unintentionally ignoring the oldest data point. r=kats

Differential Revision: https://phabricator.services.mozilla.com/D8786